--- a/it-procurement.html
+++ b/it-procurement.html
@@ -23,12 +23,19 @@
     section {
       margin-bottom: 40px;
     }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+    }
     .card {
       background-color: #f4f4f4;
       border-radius: 8px;
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
+    }
+    .card h3 {
+      margin-top: 0;
     }
     .cta-button {
       display: inline-block;
@@ -63,38 +70,40 @@
 
   <header style="background-color:#1d3a34; color:white; text-align:center; padding:60px 20px;">
     <h1>IT Procurement</h1>
-    <p>Find the right tech, vendors, and contracts with confidence</p>
+    <p>Independent support to choose the right tools, vendors, and value</p>
   </header>
 
   <main>
     <section>
       <h2>What Is IT Procurement?</h2>
-      <p>IT procurement is the process of selecting, evaluating, and purchasing technology that supports your organisation’s goals. GoPatch helps you make informed decisions that fit your needs and budget—with no vendor lock‑in or hidden costs.</p>
+      <p>IT procurement is about selecting the right technology, suppliers, and contracts to meet your needs. We help you cut through noise, avoid overspend, and get real value — whether you’re buying one server or outfitting a whole organisation.</p>
     </section>
 
     <section>
-      <h2>How We Help</h2>
-      <div class="card">
-        <h3>Hardware & Software Selection</h3>
-        <p>From devices to cloud platforms, we help you choose fit‑for‑purpose technology tailored to your environment.</p>
-      </div>
-      <div class="card">
-        <h3>Licensing & Cost Optimisation</h3>
-        <p>We review existing contracts and recommend ways to reduce spend without sacrificing performance or compliance.</p>
-      </div>
-      <div class="card">
-        <h3>Vendor & Contract Review</h3>
-        <p>Independent vetting of suppliers and services to ensure fair pricing, reliable support, and scalable agreements.</p>
+      <h2>What We Offer</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Hardware & Software Advice</h3>
+          <p>We guide you through selecting laptops, servers, M365, and cloud platforms — matched to your goals and budget.</p>
+        </div>
+        <div class="card">
+          <h3>Cost & Licensing Reviews</h3>
+          <p>We review what you’re paying for and help streamline licensing to cut waste and improve clarity.</p>
+        </div>
+        <div class="card">
+          <h3>Vendor Selection & Contracts</h3>
+          <p>Need to choose a supplier? We run impartial comparisons and review quotes or contracts so you don’t overpay or lock yourself in.</p>
+        </div>
       </div>
     </section>
 
     <section>
       <h2>Why It Matters</h2>
-      <p>Without guidance, procurement can lead to waste, complexity, or misaligned services. We make the process transparent and strategic—helping you avoid common pitfalls and stay focused on delivery.</p>
+      <p>Poor procurement decisions can lead to bloated systems, hidden costs, or products that don’t meet your needs. We keep it lean, transparent, and focused — so your IT investments support growth instead of holding it back.</p>
     </section>
 
     <section style="text-align:center;">
-      <h2>Ready to Get Started?</h2>
+      <h2>Need Help Choosing the Right Tech?</h2>
       <a href="/contact.html" class="cta-button">Send a Message</a>
       <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
     </section>
