--- a/contact.html
+++ b/contact.html
@@ -4,80 +4,72 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us | GoPatch</title>
-  <link rel="stylesheet" href="/styles/navbar.css" />
+  <link rel="stylesheet" href="/style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #ffffff;
       color: #2c2c2c;
+      background-color: #ffffff;
     }
 
-    #navbar-placeholder {
-      min-height: 80px;
+    h1, h2 {
+      color: #1d3a34;
     }
 
     main {
-      max-width: 800px;
+      max-width: 1000px;
       margin: 0 auto;
       padding: 40px 20px;
     }
 
-    h1 {
-      text-align: center;
-      color: #1d3a34;
-    }
-
     form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-top: 30px;
+      background-color: #f4f4f4;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 40px;
     }
 
     label {
+      display: block;
+      margin-top: 10px;
       font-weight: bold;
     }
 
     input, textarea {
+      width: 100%;
       padding: 10px;
-      font-size: 1em;
+      margin-top: 5px;
+      border-radius: 4px;
       border: 1px solid #ccc;
-      border-radius: 6px;
-      resize: vertical;
+      box-sizing: border-box;
+      font-size: 1em;
     }
 
-    button {
-      padding: 12px;
+    textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+
+    .cta-button {
+      margin-top: 20px;
       background-color: #4CAF50;
       color: white;
       border: none;
-      border-radius: 6px;
+      padding: 12px 24px;
       font-size: 1em;
+      border-radius: 6px;
       cursor: pointer;
     }
 
-    button:hover {
-      background-color: #45a049;
+    .cta-button:hover {
+      background-color: #3c9e46;
     }
 
-    .success, .error {
-      text-align: center;
-      margin-top: 20px;
-      font-weight: bold;
-    }
-
-    .success {
-      color: green;
-    }
-
-    .error {
-      color: red;
-    }
-
-    .calendly {
-      margin-top: 60px;
+    .calendly-wrapper {
+      margin-top: 40px;
     }
 
     footer {
@@ -86,86 +78,74 @@
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
-      margin-top: 80px;
     }
   </style>
 </head>
 <body>
-  <!-- Navigation -->
+  <!-- Shared navbar -->
   <div id="navbar-placeholder"></div>
 
-  <main>
+  <!-- Page header -->
+  <header style="background-color: #1d3a34; color: white; text-align: center; padding: 60px 20px;">
     <h1>Contact Us</h1>
-    <p style="text-align:center;">Use the form below or book a call with us directly. We'll get back to you promptly.</p>
+    <p>Send us a message or book a free call to get started</p>
+  </header>
 
-    <form id="contact-form">
-      <label for="name">Your Name</label>
-      <input type="text" id="name" name="name" required />
+  <main>
+    <section>
+      <h2>Send Us a Message</h2>
+      <form id="contact-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required />
 
-      <label for="email">Your Email</label>
-      <input type="email" id="email" name="email" required />
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
 
-      <label for="message">Your Message</label>
-      <textarea id="message" name="message" rows="6" required></textarea>
+        <label for="message">Message</label>
+        <textarea id="message" name="message" required></textarea>
 
-      <button type="submit">Send Message</button>
-      <div id="form-response" class=""></div>
-    </form>
+        <button type="submit" class="cta-button">Send Message</button>
+      </form>
+      <p id="form-status"></p>
+    </section>
 
-    <div class="calendly">
-      <h2 style="text-align:center; color:#1d3a34;">Prefer to Chat?</h2>
-      <p style="text-align:center;">Book a free 15-minute consultation via Calendly:</p>
+    <section class="calendly-wrapper">
+      <h2>Book a Free 15-Minute Call</h2>
+      <!-- Calendly inline widget begin -->
       <div class="calendly-inline-widget" data-url="https://calendly.com/mattyc4656" style="min-width:320px;height:700px;"></div>
       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-    </div>
+      <!-- Calendly inline widget end -->
+    </section>
   </main>
 
   <footer>
     &copy; 2025 GoPatch. All rights reserved.
   </footer>
 
-  <!-- Load Navbar -->
+  <script src="/scripts/navbar.js"></script>
   <script>
-    fetch("/navbar.html")
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("navbar-placeholder").innerHTML = html;
-      });
-  </script>
-
-  <!-- Handle Form Submission -->
-  <script>
-    const form = document.getElementById('contact-form');
-    const responseBox = document.getElementById('form-response');
-
-    form.addEventListener('submit', async (e) => {
+    // Handle form submission
+    document.getElementById('contact-form').addEventListener('submit', async function (e) {
       e.preventDefault();
-      responseBox.textContent = 'Sending...';
-      responseBox.className = '';
-
+      const form = e.target;
       const data = {
         name: form.name.value,
         email: form.email.value,
         message: form.message.value
       };
 
-      try {
-        const res = await fetch('https://rapid-resonance-0f24.m-cstael.workers.dev/', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
+      const res = await fetch('https://rapid-resonance-0f24.m-cstael.workers.dev/', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(data)
+      });
 
-        if (res.ok) {
-          responseBox.textContent = 'Thanks! Your message was sent.';
-          responseBox.className = 'success';
-          form.reset();
-        } else {
-          throw new Error();
-        }
-      } catch (err) {
-        responseBox.textContent = 'Sorry, something went wrong. Please try again later.';
-        responseBox.className = 'error';
+      const resultText = document.getElementById('form-status');
+      if (res.ok) {
+        resultText.textContent = "Thanks! Your message has been sent.";
+        form.reset();
+      } else {
+        resultText.textContent = "Sorry, there was an issue sending your message.";
       }
     });
   </script>
