--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
         message: form.message.value
       };
 
-      const res = await fetch('https://rapid-resonance-0f24.m-cstael.workers.dev/', {
+      const res = await fetch('https://dawn-sun-1a9d.m-cstael.workers.dev/', {
         method: 'POST',
         headers: {'Content-Type': 'application/json'},
         body: JSON.stringify(data)
