--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us | GoPatch</title>
   <link rel="stylesheet" href="/style.css" />
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -85,7 +86,6 @@
   <!-- Shared navbar -->
   <div id="navbar-placeholder"></div>
 
-  <!-- Page header -->
   <header style="background-color: #1d3a34; color: white; text-align: center; padding: 60px 20px;">
     <h1>Contact Us</h1>
     <p>Send us a message or book a free call to get started</p>
@@ -104,6 +104,9 @@
         <label for="message">Message</label>
         <textarea id="message" name="message" required></textarea>
 
+        <!-- Turnstile CAPTCHA -->
+        <div class="cf-turnstile" data-sitekey="0x4AAAAAABlx1yob5oi2BjCO" data-theme="light"></div>
+
         <button type="submit" class="cta-button">Send Message</button>
       </form>
       <p id="form-status"></p>
@@ -111,10 +114,8 @@
 
     <section class="calendly-wrapper">
       <h2>Book a Free 15-Minute Call</h2>
-      <!-- Calendly inline widget begin -->
       <div class="calendly-inline-widget" data-url="https://calendly.com/mattyc4656" style="min-width:320px;height:700px;"></div>
       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-      <!-- Calendly inline widget end -->
     </section>
   </main>
 
@@ -124,28 +125,37 @@
 
   <script src="/scripts/navbar.js"></script>
   <script>
-    // Handle form submission
     document.getElementById('contact-form').addEventListener('submit', async function (e) {
       e.preventDefault();
       const form = e.target;
+      const status = document.getElementById('form-status');
+
+      const turnstileResponse = document.querySelector('[name="cf-turnstile-response"]')?.value;
+
+      if (!turnstileResponse) {
+        status.textContent = "Please complete the CAPTCHA before submitting.";
+        return;
+      }
+
       const data = {
         name: form.name.value,
         email: form.email.value,
-        message: form.message.value
+        message: form.message.value,
+        'cf-turnstile-response': turnstileResponse
       };
 
       const res = await fetch('https://dawn-sun-1a9d.m-cstael.workers.dev/', {
         method: 'POST',
-        headers: {'Content-Type': 'application/json'},
+        headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
       });
 
-      const resultText = document.getElementById('form-status');
       if (res.ok) {
-        resultText.textContent = "Thanks! Your message has been sent.";
+        status.textContent = "Thanks! Your message has been sent.";
         form.reset();
+        turnstile.reset(); // reset CAPTCHA
       } else {
-        resultText.textContent = "Sorry, there was an issue sending your message.";
+        status.textContent = "Sorry, there was an issue sending your message.";
       }
     });
   </script>
