--- a/index.html
+++ b/index.html
@@ -1,51 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GoPatch - Secure. Simplify. Scale.</title>
+  <link rel="stylesheet" href="/style.css" />
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
       color: #2c2c2c;
       background-color: #ffffff;
-    }
-
-    nav {
-      background-color: #1d3a34;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 20px;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    nav .logo {
-      color: white;
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-size: 1em;
     }
 
     header {
@@ -77,6 +42,12 @@
       text-decoration: none;
     }
 
+    .cta-button.secondary {
+      background-color: white;
+      color: #1d3a34;
+      border: 2px solid #1d3a34;
+    }
+
     .services, .testimonials, .contact {
       padding: 60px 20px;
       max-width: 1100px;
@@ -95,7 +66,7 @@
       gap: 20px;
     }
 
-    .service-card, .testimonial {
+    .service-card {
       border: 1px solid #ddd;
       border-radius: 10px;
       padding: 20px;
@@ -115,7 +86,7 @@
       loading: lazy;
     }
 
-    .service-card h3, .testimonial h3 {
+    .service-card h3 {
       color: #1d3a34;
     }
 
@@ -152,7 +123,7 @@
       margin-bottom: 30px;
     }
 
-    .footer {
+    footer {
       background-color: #1d3a34;
       color: white;
       padding: 20px;
@@ -161,12 +132,6 @@
     }
 
     @media (max-width: 600px) {
-      nav ul {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 10px;
-      }
-
       header h1 {
         font-size: 2em;
       }
@@ -183,22 +148,17 @@
   </style>
 </head>
 <body>
-  <nav>
-    <div class="logo">GoPatch</div>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#testimonials">Testimonials</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- Navbar Placeholder (loaded via JS) -->
+  <div id="navbar-placeholder"></div>
 
+  <!-- Hero Header -->
   <header>
     <h1>Secure. Simplify. Scale.</h1>
     <p>Helping schools and small businesses stay secure, up-to-date, and on-track with expert IT consulting, procurement, and patch management.</p>
     <a class="cta-button" href="/contact.html">Book a Free Consultation</a>
   </header>
 
+  <!-- Services Section -->
   <section class="services" id="services">
     <h2>What We Do</h2>
     <div class="service-grid">
@@ -255,6 +215,7 @@
     </div>
   </section>
 
+  <!-- Testimonials Section -->
   <section class="testimonials" id="testimonials">
     <h2>What Our Clients Say</h2>
     <div class="testimonial">
@@ -270,24 +231,29 @@
     </p>
   </section>
 
+  <!-- Contact Section -->
   <section class="contact" id="contact">
     <h2>Get in Touch</h2>
     <p>Have a question or want to discuss your IT needs? You can send us a message or book a free 30-minute call below.</p>
     <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
       <a class="cta-button" href="/contact.html">Send a Message</a>
-      <a class="cta-button" style="background-color: #ffffff; color: #1d3a34; border: 2px solid #1d3a34;" href="/contact.html#calendly">Book a Call</a>
+      <a class="cta-button secondary" href="/contact.html#calendly">Book a Call</a>
     </div>
   </section>
 
-  <footer class="footer">
+  <!-- Footer -->
+  <footer>
     &copy; 2025 GoPatch. All rights reserved.
   </footer>
 
+  <!-- Cookie Banner -->
   <div id="cookie-banner" role="dialog" aria-label="Cookie consent banner" style="position: fixed; bottom: 0; left: 0; right: 0; background: #1d3a34; color: white; padding: 15px 20px; display: none; justify-content: space-between; align-items: center; font-size: 0.9em; z-index: 9999;">
     <span>This website uses cookies to ensure you get the best experience. <a href="/privacy-policy.html" style="color: #4CAF50; text-decoration: underline;">Learn more</a></span>
     <button id="cookie-accept" style="background: #4CAF50; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Got it</button>
   </div>
 
+  <!-- Scripts -->
+  <script src="/scripts/navbar.js"></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       if (!localStorage.getItem('cookiesAccepted')) {
