--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
       color: white;
       padding: 60px 20px;
       text-align: center;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
     }
 
     header h1 {
@@ -101,12 +99,16 @@
       margin-right: 8px;
     }
 
-    .testimonial {
+    .testimonial-card {
+      background-color: #f9f9f9;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 20px;
       margin-bottom: 20px;
-      font-style: italic;
+      text-align: center;
     }
 
-    .testimonial strong {
+    .testimonial-card strong {
       display: block;
       margin-top: 10px;
       font-style: normal;
@@ -218,11 +220,11 @@
   <!-- Testimonials Section -->
   <section class="testimonials" id="testimonials">
     <h2>What Our Clients Say</h2>
-    <div class="testimonial">
+    <div class="testimonial-card">
       "GoPatch made a huge difference to our IT infrastructure. Reliable, proactive and always professional."
       <strong>– Natalie K., School Business Manager</strong>
     </div>
-    <div class="testimonial">
+    <div class="testimonial-card">
       "Thanks to GoPatch, our patching and compliance are now fully automated. I can finally sleep at night."
       <strong>– Mark S., IT Manager</strong>
     </div>
