--- a/patch-management.html
+++ b/patch-management.html
@@ -12,31 +12,45 @@
       color: #2c2c2c;
       background-color: #ffffff;
     }
+
     h1, h2, h3 {
       color: #1d3a34;
     }
+
+    header.page-title {
+      background-color: #1d3a34;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
     main {
       max-width: 1000px;
       margin: 0 auto;
       padding: 40px 20px;
     }
+
     section {
       margin-bottom: 40px;
     }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 30px;
     }
+
     .card {
       background-color: #f4f4f4;
       border-radius: 8px;
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
+
     .card h3 {
       margin-top: 0;
     }
+
     .cta-button {
       display: inline-block;
       margin: 20px 10px 0;
@@ -48,14 +62,17 @@
       font-size: 1em;
       text-decoration: none;
     }
+
     .cta-button.secondary {
-      background-color: white;
-      color: #1d3a34;
-      border: 2px solid #1d3a34;
+      background-color: #B86A35;
+      color: white;
+      border: none;
     }
+
     .cta-button:hover {
-      background-color: #3c9e46;
+      opacity: 0.9;
     }
+
     footer {
       background-color: #1d3a34;
       color: white;
@@ -68,7 +85,8 @@
 <body>
   <div id="navbar-placeholder"></div>
 
-  <header style="background-color:#1d3a34; color:white; text-align:center; padding:60px 20px;">
+  <!-- Page Title Section -->
+  <header class="page-title">
     <h1>Patch Management</h1>
     <p>Keep your devices secure, updated, and compliant — with zero hassle</p>
   </header>
@@ -102,7 +120,7 @@
       <p>Most cyberattacks exploit known vulnerabilities in unpatched software. With GoPatch, you don’t need to worry about falling behind. Our service reduces risk, supports compliance, and saves internal time — without complex tools or alerts.</p>
     </section>
 
-    <section style="text-align:center;">
+    <section class="card" style="text-align:center;">
       <h2>Ready to Automate Your Patching?</h2>
       <a href="/contact.html" class="cta-button">Send a Message</a>
       <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
