--- a/it-consulting.html
+++ b/it-consulting.html
@@ -6,38 +6,46 @@
   <title>IT Consulting | GoPatch</title>
   <link rel="stylesheet" href="/style.css" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      color: #2c2c2c;
-      background-color: #ffffff;
-    }
-    h1, h2, h3 {
-      color: #1d3a34;
-    }
     main {
       max-width: 1000px;
       margin: 0 auto;
       padding: 40px 20px;
     }
+
     section {
       margin-bottom: 40px;
     }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 30px;
     }
+
     .card {
       background-color: #f4f4f4;
       border-radius: 8px;
       padding: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
+
     .card h3 {
       margin-top: 0;
       color: #1d3a34;
     }
+
+    .cta-card {
+      background-color: #f4f4f4;
+      border-radius: 8px;
+      padding: 30px;
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .cta-card h2 {
+      margin-top: 0;
+    }
+
     .cta-button {
       display: inline-block;
       margin: 20px 10px 0;
@@ -49,14 +57,17 @@
       font-size: 1em;
       text-decoration: none;
     }
+
     .cta-button.secondary {
-      background-color: white;
-      color: #1d3a34;
-      border: 2px solid #1d3a34;
+      background-color: #fff;
+      color: #B86A35;
+      border: 2px solid #B86A35;
     }
+
     .cta-button:hover {
       background-color: #3c9e46;
     }
+
     footer {
       background-color: #1d3a34;
       color: white;
@@ -70,8 +81,8 @@
   <!-- Navbar -->
   <div id="navbar-placeholder"></div>
 
-  <!-- Header -->
-  <header style="background-color:#1d3a34; color:white; text-align:center; padding:60px 20px;">
+  <!-- Hero Header -->
+  <header class="hero">
     <h1>IT Consulting</h1>
     <p>Clear, flexible IT advice for schools and growing businesses</p>
   </header>
@@ -105,8 +116,7 @@
       <p>Too often, IT decisions are made in a vacuum or under pressure. Our consulting gives you breathing room, a second opinion, and a structured way to align IT with your mission – without jargon or bias.</p>
     </section>
 
-    <!-- CTA Block -->
-    <section style="text-align:center;">
+    <section class="cta-card">
       <h2>Ready to Get Started?</h2>
       <a href="/contact.html" class="cta-button">Send a Message</a>
       <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
