--- a/it-consulting.html
+++ b/it-consulting.html
@@ -59,7 +59,7 @@
     }
 
     .cta-button.secondary {
-      background-color: #fff;
+      background-color: white;
       color: #B86A35;
       border: 2px solid #B86A35;
     }
