--- a/it-consulting.html
+++ b/it-consulting.html
@@ -6,6 +6,24 @@
   <title>IT Consulting | GoPatch</title>
   <link rel="stylesheet" href="/style.css" />
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      color: #2c2c2c;
+      background-color: #ffffff;
+    }
+
+    h1, h2, h3 {
+      color: #1d3a34;
+    }
+
+    header.page-title {
+      background-color: #1d3a34;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
     main {
       max-width: 1000px;
       margin: 0 auto;
@@ -26,23 +44,10 @@
       background-color: #f4f4f4;
       border-radius: 8px;
       padding: 20px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
     .card h3 {
-      margin-top: 0;
-      color: #1d3a34;
-    }
-
-    .cta-card {
-      background-color: #f4f4f4;
-      border-radius: 8px;
-      padding: 30px;
-      text-align: center;
-      margin-top: 40px;
-    }
-
-    .cta-card h2 {
       margin-top: 0;
     }
 
@@ -59,13 +64,13 @@
     }
 
     .cta-button.secondary {
-      background-color: white;
-      color: #B86A35;
-      border: 2px solid #B86A35;
+      background-color: #B86A35;
+      color: white;
+      border: none;
     }
 
     .cta-button:hover {
-      background-color: #3c9e46;
+      opacity: 0.9;
     }
 
     footer {
@@ -78,11 +83,10 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
   <div id="navbar-placeholder"></div>
 
-  <!-- Hero Header -->
-  <header class="hero">
+  <!-- Page Title Section -->
+  <header class="page-title">
     <h1>IT Consulting</h1>
     <p>Clear, flexible IT advice for schools and growing businesses</p>
   </header>
@@ -116,7 +120,7 @@
       <p>Too often, IT decisions are made in a vacuum or under pressure. Our consulting gives you breathing room, a second opinion, and a structured way to align IT with your mission – without jargon or bias.</p>
     </section>
 
-    <section class="cta-card">
+    <section class="card" style="text-align:center;">
       <h2>Ready to Get Started?</h2>
       <a href="/contact.html" class="cta-button">Send a Message</a>
       <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
