--- a/technical-projects.html
+++ b/technical-projects.html
@@ -6,22 +6,8 @@
   <title>Technical Projects | GoPatch</title>
   <link rel="stylesheet" href="/style.css" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      color: #2c2c2c;
-      background-color: #ffffff;
-    }
-
     h1, h2, h3 {
       color: #1d3a34;
-    }
-
-    header.page-title {
-      background-color: #1d3a34;
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
     }
 
     main {
@@ -49,36 +35,6 @@
 
     .card h3 {
       margin-top: 0;
-    }
-
-    .cta-button {
-      display: inline-block;
-      margin: 20px 10px 0;
-      padding: 12px 24px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 1em;
-      text-decoration: none;
-    }
-
-    .cta-button.secondary {
-      background-color: #B86A35;
-      color: white;
-      border: none;
-    }
-
-    .cta-button:hover {
-      opacity: 0.9;
-    }
-
-    footer {
-      background-color: #1d3a34;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
     }
   </style>
 </head>
@@ -123,4 +79,14 @@
     <section class="card" style="text-align:center;">
       <h2>Planning a Project?</h2>
       <a href="/contact.html" class="cta-button">Send a Message</a>
-      <a hr
+      <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 GoPatch. All rights reserved.
+  </footer>
+
+  <script src="/scripts/navbar.js"></script>
+</body>
+</html>
