--- a/technical-projects.html
+++ b/technical-projects.html
@@ -76,12 +76,14 @@
       <p>Poorly delivered technical projects can disrupt learning, productivity, and budgets. Our approach is grounded in education and SME delivery experience — clear briefs, no surprises, and minimal downtime.</p>
     </section>
 
-    <section class="card" style="text-align:center;">
-      <h2>Planning a Project?</h2>
-      <a href="/contact.html" class="cta-button">Send a Message</a>
-      <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
-    </section>
-  </main>
+<section class="card" style="text-align:center; padding: 40px 20px;">
+  <h2 style="margin-bottom: 20px;">Planning a Project?</h2>
+  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 10px;">
+    <a href="/contact.html" class="cta-button">Send a Message</a>
+    <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
+  </div>
+</section>
+
 
   <footer>
     &copy; 2025 GoPatch. All rights reserved.
