--- a/technical-projects.html
+++ b/technical-projects.html
@@ -29,12 +29,34 @@
     .card {
       background-color: #f4f4f4;
       border-radius: 8px;
-      padding: 20px;
+      padding: 40px 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
     .card h3 {
       margin-top: 0;
+    }
+
+    .cta-button {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 24px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 1em;
+      text-decoration: none;
+    }
+
+    .cta-button.secondary {
+      background-color: #B86A35;
+      color: white;
+      border: none;
+    }
+
+    .cta-button:hover {
+      opacity: 0.9;
     }
   </style>
 </head>
@@ -76,14 +98,14 @@
       <p>Poorly delivered technical projects can disrupt learning, productivity, and budgets. Our approach is grounded in education and SME delivery experience — clear briefs, no surprises, and minimal downtime.</p>
     </section>
 
-<section class="card" style="text-align:center; padding: 40px 20px;">
-  <h2 style="margin-bottom: 20px;">Planning a Project?</h2>
-  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 10px;">
-    <a href="/contact.html" class="cta-button">Send a Message</a>
-    <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
-  </div>
-</section>
-
+    <section class="card" style="text-align:center;">
+      <h2 style="margin-bottom: 20px;">Planning a Project?</h2>
+      <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 10px;">
+        <a href="/contact.html" class="cta-button">Send a Message</a>
+        <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
+      </div>
+    </section>
+  </main>
 
   <footer>
     &copy; 2025 GoPatch. All rights reserved.
