--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <!-- Hero Header -->
   <section class="hero">
     <h1>Secure. Simplify. Scale.</h1>
-    <p>Helping schools and small businesses stay secure, up-to-date, and on-track with expert IT consulting, procurement, and patch management.</p>
+    <p>Helping schools and businesses stay secure, up-to-date, and on-track with expert IT consulting, procurement, and patch management.</p>
     <a class="cta-button" href="/contact.html">Book a Free Consultation</a>
   </section>
 
@@ -233,14 +233,14 @@
   </section>
 
   <!-- Contact -->
-  <section class="contact" id="contact">
-    <h2>Get in Touch</h2>
-    <p>Have a question or want to discuss your IT needs? You can send us a message or book a free 30-minute call below.</p>
-    <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-      <a class="cta-button" href="/contact.html">Send a Message</a>
-      <a class="cta-button secondary" href="/contact.html#calendly">Book a Call</a>
-    </div>
-  </section>
+<section class="contact" id="contact">
+  <h2>Get in Touch</h2>
+  <p>Have a question or want to discuss your IT needs? You can send us a message or book a free 30-minute call below.</p>
+  <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
+    <a class="cta-button" href="/contact.html">Send a Message</a>
+    <a class="cta-button secondary" href="/contact.html#calendly" style="background-color: #B86A35; color: white; border: none;">Book a Free Call</a>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
